<resources>
    <string name="app_name">Pro autocue</string>
    <string name="action_settings">Settings</string>
    <string name="action_clear">Clear history</string>
    <string name="action_switch">Switch</string>
    <string name="just_teleprompter">Teleprompter</string>
    <string name="content_authority">com.mrerror.proautocue_androidteleprompter</string>
    <string name="record_with_teleprompter">Record with teleprompter</string>
    <string name="title_activity_teleprompter">Teleprompter</string>
    <string name="weekly_reminder_title">Thanks for using our app</string>
    <string name="weekly_reminder_content">You are using our app for </string>
    <string name="pref_weeks_notification">weeks_notification </string>

    //////////////////////
    // Settings Activity//
    //////////////////////

    // SCROLL SPEED
    <string name="speed_key">speek_key</string>
    <string name="speed_label">Scrolling Speed</string>
    <string name="speed_summary">Control the speed of the script scrolling</string>
    <string name="speed_default">1</string>
    <string name="speed_max">5</string>
    // TEXT SIZE
    <string name="size_key">text_size</string>
    <string name="size_label">Text size</string>
    <string name="size_summary">Control the size of the script</string>
    <string name="size_default">1</string>
    <string name="size_max">5</string>

    // BRIGHTNESS
    <string name="brightness_key">screen_brightness</string>
    <string name="brightness_label">Screen brightness</string>
    <string name="brightness_summary">Control the brightness of the screen</string>
    <string name="brightness_default">200</string>
    <string name="brightness_max">255</string>

    // TEXT COLOR
    <string name="text_color_key">text_color</string>
    <string name="text_color_label">Text color</string>
    <string name="text_color_summary">Choose the text color</string>

    // BACKGROUND COLOR
    <string name="background_color_key">background_color</string>
    <string name="background_color_label">Background color</string>
    <string name="background_color_summary">Choose the background color</string>

    // LINE SPACE
    <string name="space_key">line_spacing</string>
    <string name="space_label">Line spacing</string>
    <string name="space_summary">Change line spacing</string>
    <string name="space_default">1</string>
    <string name="space_max">5</string>

    // MIRROR
    <string name="mirror_key">mirroring</string>
    <string name="mirror_label">Mirror Mode</string>

    // TIMEOUT
    <string name="timeout_key">timeout_key</string>
    <string name="timeout_label">Disable Timeout</string>
    <string name="timeout_summary">Disable screen timeout</string>

    // MANUAL BRIGHTNESS

    <string name="manual_brightness_key">manual_brightness</string>
    <string name="manual_brightness_label">Manual brightness</string>
    <string name="manual_brightness_summary">Manual brightness for only teleprompter screen</string>
    <string name="appwidget_text">Try again</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="add_btn">Add script button</string>
    <string name="camera_des">Camera view</string>
    <string name="record_des">Record button</string>
    <string name="script_content_text_des">script content text</string>
    <string name="teleprompter">Teleprompter_desc</string>
    <string name="play_teleprompter_des">play the teleprompter</string>
    <string name="cannot_access_camera">Cannot access the camera.</string>
    <string name="failed">Failed</string>
    <string name="video_saved">Video saved:</string>
    <string name="permission_req_files">Permission is Required for getting list of files</string>
    <string name="week">week</string>
    <string name="weeks">weeks</string>

</resources>
