<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.mrerror.paid.activity.TeleOrCam">

    <LinearLayout
        android:gravity="center"
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/telePrimaryColor"
        android:contentDescription="@string/teleprompter"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cam_linear"
        app:layout_constraintTop_toTopOf="parent"
        >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/play"
            android:layout_marginBottom="@dimen/vertical_margin"
            />
        <TextView
            android:textColor="@android:color/white"
            android:textSize="22sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/just_teleprompter"
            android:textAllCaps="true"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cam_linear"
        android:gravity="center"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/recordPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        >

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/camera"
            android:layout_marginBottom="@dimen/vertical_margin"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="22sp"
            android:contentDescription="@string/record_with_teleprompter"
            android:text="@string/record_with_teleprompter"
            android:textAllCaps="true"
            />
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
